[gd_scene load_steps=15 format=3 uid="uid://c62pvgrpnqhhu"]

[ext_resource type="Texture2D" uid="uid://da6hny11f0nvn" path="res://assets/players/topdownpack.png" id="1_gsj0x"]
[ext_resource type="Script" path="res://Cop.gd" id="1_kkcn7"]
[ext_resource type="PackedScene" uid="uid://bt13clk1pktq8" path="res://Bullet.tscn" id="2_thc74"]
[ext_resource type="Texture2D" uid="uid://eviwaqhe2pek" path="res://assets/projectiles/All_Fire_Bullet_Pixel_16x16_01.png" id="4_rmuha"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v4s5l"]
atlas = ExtResource("1_gsj0x")
region = Rect2(32, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0vy6"]
atlas = ExtResource("1_gsj0x")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_se6hr"]
atlas = ExtResource("1_gsj0x")
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wse4s"]
atlas = ExtResource("1_gsj0x")
region = Rect2(0, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi2fi"]
atlas = ExtResource("1_gsj0x")
region = Rect2(0, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3cek"]
atlas = ExtResource("1_gsj0x")
region = Rect2(0, 192, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vvsel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4s5l")
}],
"loop": true,
"name": &"gun_drawn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0vy6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_se6hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wse4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi2fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3cek")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0uyvn"]
radius = 6.0

[sub_resource type="Animation" id="Animation_8lsxs"]
resource_name = "MuzzleFlash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.6, 0.4), Vector2(0.7, 0.15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x7grn"]
_data = {
"MuzzleFlash": SubResource("Animation_8lsxs")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_kkcn7")
Bullet = ExtResource("2_thc74")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_vvsel")
animation = &"gun_drawn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0uyvn")

[node name="EndOfGun" type="Marker2D" parent="."]
position = Vector2(9, 0)

[node name="GunDirection" type="Marker2D" parent="."]
position = Vector2(10, 0)

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(15, 2.13163e-14)
rotation = 3.14159
scale = Vector2(0.7, 0.15)
texture = ExtResource("4_rmuha")
region_enabled = true
region_rect = Rect2(183, 325, 18, 21)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x7grn")
}

[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
